; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_utmath.c_acpi_ut_short_shift_left.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_utmath.c_acpi_ut_short_shift_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.uint64_overlay = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@ut_short_shift_left = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ut_short_shift_left(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %union.uint64_overlay, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* @ut_short_shift_left, align 4
  %10 = call i32 @ACPI_FUNCTION_TRACE(i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = bitcast %union.uint64_overlay* %8 to i32*
  store i32 %11, i32* %12, align 8
  %13 = load i32, i32* %6, align 4
  %14 = and i32 %13, 63
  %15 = icmp sge i32 %14, 32
  br i1 %15, label %16, label %27

16:                                               ; preds = %3
  %17 = bitcast %union.uint64_overlay* %8 to %struct.TYPE_2__*
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = bitcast %union.uint64_overlay* %8 to %struct.TYPE_2__*
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  store i64 %19, i64* %21, align 8
  %22 = bitcast %union.uint64_overlay* %8 to %struct.TYPE_2__*
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  %24 = load i32, i32* %6, align 4
  %25 = and i32 %24, 63
  %26 = sub nsw i32 %25, 32
  store i32 %26, i32* %6, align 4
  br label %27

27:                                               ; preds = %16, %3
  %28 = bitcast %union.uint64_overlay* %8 to %struct.TYPE_2__*
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = bitcast %union.uint64_overlay* %8 to %struct.TYPE_2__*
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @ACPI_SHIFT_LEFT_64_BY_32(i64 %30, i64 %33, i32 %34)
  %36 = load i32*, i32** %7, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %38, label %42

38:                                               ; preds = %27
  %39 = bitcast %union.uint64_overlay* %8 to i32*
  %40 = load i32, i32* %39, align 8
  %41 = load i32*, i32** %7, align 8
  store i32 %40, i32* %41, align 4
  br label %42

42:                                               ; preds = %38, %27
  %43 = load i32, i32* @AE_OK, align 4
  %44 = call i32 @return_ACPI_STATUS(i32 %43)
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @ACPI_SHIFT_LEFT_64_BY_32(i64, i64, i32) #1

declare dso_local i32 @return_ACPI_STATUS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
